--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,9 @@ channels:
   - defaults
   - conda-forge
 dependencies:
-  - pip=23.3.1=py312hca03da5_0
-  - python=3.12.2=h99e199e_0
-  - pyzbar=0.1.9=pyhd8ed1ab_0
+  - python=3.12
+  - pip
+  - pyzbar
   - google-api-python-client
   - pip:
       - opencv-python==4.9.0.80
